--- a/roles/nomad/templates/20-server.hcl.j2
+++ b/roles/nomad/templates/20-server.hcl.j2
@@ -10,5 +10,7 @@ server {
 }
 
 telemetry {
-    statsd_address = "172.16.107.112:8125"
+    statsd_address = "172.16.107.114:8125"
+    publish_allocation_metrics = "true"
+    publish_node_metrics = "true"
 }
